<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="fair_15">Fair(15%)</string>
    <string name="round_up_tip">Round up tip ?</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="calculate">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>